--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>happa_new_year2021!</title>
-        <link rel = "stylesheet" href = "style.css"/>
+        <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
     <header>
